Assignment1/src/main/zcode/parser/ZCodeParser.py
# Generated from main/zcode/parser/ZCode.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'['", "']'", "'{'", "'}'", 
                     "'('", "')'", "','", "':'", "';'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'=='", "'!='", "'>'", "'<'", 
                     "'<='", "'>='", "'<-'", "'not'", "'and'", "'OR'", "'...'", 
                     "'true'", "'false'", "'number'", "'bool'", "'string'", 
                     "'return'", "'var'", "'dynamic'", "'func'", "'for'", 
                     "'until'", "'by'", "'break'", "'continue'", "'if'", 
                     "'else'", "'elif'", "'begin'", "'end'", "'int'", "'float'", 
                     "'const'", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LSB", "RSB", "LCB", "RCB", 
                      "LB", "RB", "CM", "COLON", "SM", "ADD", "MINUS", "MUL", 
                      "DIV", "MOD", "ASSIGN", "EQ", "DIFF", "GT", "LT", 
                      "LTEQ", "GTEQ", "WIS", "NOT", "AND", "OR", "STRCONCAT", 
                      "TRUE_", "FALSE_", "NUM", "BOOL_", "STR_", "RET_", 
                      "VAR_", "DYNAMIC", "FUNC_", "FOR_", "UNTIL", "BY", 
                      "BREAK_", "CONT", "IF_", "ELSE_", "ELSE_IF", "BEGIN", 
                      "END", "INT_", "FLOAT_", "CONST_", "DOT", "NUMBERS", 
                      "BOOLS", "INT_PART", "EXPO_PART", "NEWLINE", "STRS", 
                      "ID", "LINECMT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_func_decl = 1
    RULE_main_decl = 2
    RULE_func_body = 3
    RULE_var_decl = 4
    RULE_singDecl = 5
    RULE_typ = 6
    RULE_primitive = 7
    RULE_arrayT = 8
    RULE_indexExpr = 9
    RULE_indexTail = 10
    RULE_argList = 11
    RULE_argT = 12
    RULE_argument = 13
    RULE_paramList = 14
    RULE_paramT = 15
    RULE_param = 16
    RULE_stmt_list = 17
    RULE_stmtT = 18
    RULE_func_list = 19
    RULE_funcT = 20
    RULE_sizeList = 21
    RULE_sizeT = 22
    RULE_expr = 23
    RULE_expr1 = 24
    RULE_expr2 = 25
    RULE_expr3 = 26
    RULE_expr4 = 27
    RULE_expr5 = 28
    RULE_expr6 = 29
    RULE_expr7 = 30
    RULE_expr8 = 31
    RULE_index_op = 32
    RULE_funcCall = 33
    RULE_statements = 34
    RULE_var_declStmt = 35
    RULE_assignStmt = 36
    RULE_ifStmt = 37
    RULE_elifStmt = 38
    RULE_elseifT = 39
    RULE_elif1 = 40
    RULE_elseStmt = 41
    RULE_forStmt = 42
    RULE_breakStmt = 43
    RULE_contStmt = 44
    RULE_returnStmt = 45
    RULE_funcCallStmt = 46
    RULE_blockStmt = 47
    RULE_blockBody = 48
    RULE_lhs = 49
    RULE_literals = 50

    ruleNames =  [ "program", "func_decl", "main_decl", "func_body", "var_decl", 
                   "singDecl", "typ", "primitive", "arrayT", "indexExpr", 
                   "indexTail", "argList", "argT", "argument", "paramList", 
                   "paramT", "param", "stmt_list", "stmtT", "func_list", 
                   "funcT", "sizeList", "sizeT", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "index_op", "funcCall", "statements", "var_declStmt", 
                   "assignStmt", "ifStmt", "elifStmt", "elseifT", "elif1", 
                   "elseStmt", "forStmt", "breakStmt", "contStmt", "returnStmt", 
                   "funcCallStmt", "blockStmt", "blockBody", "lhs", "literals" ]

    EOF = Token.EOF
    T__0=1
    LSB=2
    RSB=3
    LCB=4
    RCB=5
    LB=6
    RB=7
    CM=8
    COLON=9
    SM=10
    ADD=11
    MINUS=12
    MUL=13
    DIV=14
    MOD=15
    ASSIGN=16
    EQ=17
    DIFF=18
    GT=19
    LT=20
    LTEQ=21
    GTEQ=22
    WIS=23
    NOT=24
    AND=25
    OR=26
    STRCONCAT=27
    TRUE_=28
    FALSE_=29
    NUM=30
    BOOL_=31
    STR_=32
    RET_=33
    VAR_=34
    DYNAMIC=35
    FUNC_=36
    FOR_=37
    UNTIL=38
    BY=39
    BREAK_=40
    CONT=41
    IF_=42
    ELSE_=43
    ELSE_IF=44
    BEGIN=45
    END=46
    INT_=47
    FLOAT_=48
    CONST_=49
    DOT=50
    NUMBERS=51
    BOOLS=52
    INT_PART=53
    EXPO_PART=54
    NEWLINE=55
    STRS=56
    ID=57
    LINECMT=58
    WS=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.StatementsContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.StatementsContext,i)


        def main_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Main_declContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Main_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZCodeParser.Func_declContext)
            else:
                return self.getTypedRuleContext(ZCodeParser.Func_declContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.LB) | (1 << ZCodeParser.NUM) | (1 << ZCodeParser.BOOL_) | (1 << ZCodeParser.STR_) | (1 << ZCodeParser.RET_) | (1 << ZCodeParser.VAR_) | (1 << ZCodeParser.DYNAMIC) | (1 << ZCodeParser.FUNC_) | (1 << ZCodeParser.FOR_) | (1 << ZCodeParser.BREAK_) | (1 << ZCodeParser.CONT) | (1 << ZCodeParser.IF_) | (1 << ZCodeParser.BEGIN) | (1 << ZCodeParser.NUMBERS) | (1 << ZCodeParser.BOOLS) | (1 << ZCodeParser.NEWLINE) | (1 << ZCodeParser.STRS) | (1 << ZCodeParser.ID))) != 0):
                self.state = 106
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 102
                    self.statements()
                    pass

                elif la_ == 2:
                    self.state = 103
                    self.main_decl()
                    pass

                elif la_ == 3:
                    self.state = 104
                    self.func_decl()
                    pass

                elif la_ == 4:
                    self.state = 105
                    self.match(ZCodeParser.NEWLINE)
                    pass


                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_(self):
            return self.getToken(ZCodeParser.FUNC_, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def paramList(self):
            return self.getTypedRuleContext(ZCodeParser.ParamListContext,0)


        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def func_body(self):
            return self.getTypedRuleContext(ZCodeParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_func_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = ZCodeParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(ZCodeParser.FUNC_)
            self.state = 114
            self.match(ZCodeParser.ID)
            self.state = 115
            self.match(ZCodeParser.LB)
            self.state = 116
            self.paramList()
            self.state = 117
            self.match(ZCodeParser.RB)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 118
                self.func_body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC_(self):
            return self.getToken(ZCodeParser.FUNC_, 0)

        def LB(self):
            return self.getToken(ZCodeParser.LB, 0)

        def RB(self):
            return self.getToken(ZCodeParser.RB, 0)

        def func_body(self):
            return self.getTypedRuleContext(ZCodeParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_main_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_decl" ):
                return visitor.visitMain_decl(self)
            else:
                return visitor.visitChildren(self)




    def main_decl(self):

        localctx = ZCodeParser.Main_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ZCodeParser.FUNC_)
            self.state = 122
            self.match(ZCodeParser.T__0)
            self.state = 123
            self.match(ZCodeParser.LB)
            self.state = 124
            self.match(ZCodeParser.RB)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 125
                self.func_body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStmt(self):
            return self.getTypedRuleContext(ZCodeParser.BlockStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnStmtContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_func_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_body" ):
                return visitor.visitFunc_body(self)
            else:
                return visitor.visitChildren(self)




    def func_body(self):

        localctx = ZCodeParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_body)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.BEGIN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.blockStmt()
                pass
            elif token in [ZCodeParser.RET_]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.returnStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def singDecl(self):
            return self.getTypedRuleContext(ZCodeParser.SingDeclContext,0)


        def NUM(self):
            return self.getToken(ZCodeParser.NUM, 0)

        def BOOL_(self):
            return self.getToken(ZCodeParser.BOOL_, 0)

        def STR_(self):
            return self.getToken(ZCodeParser.STR_, 0)

        def VAR_(self):
            return self.getToken(ZCodeParser.VAR_, 0)

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def arrayT(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayTContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def sizeList(self):
            return self.getTypedRuleContext(ZCodeParser.SizeListContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_var_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = ZCodeParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUM, ZCodeParser.BOOL_, ZCodeParser.STR_, ZCodeParser.VAR_, ZCodeParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUM) | (1 << ZCodeParser.BOOL_) | (1 << ZCodeParser.STR_) | (1 << ZCodeParser.VAR_) | (1 << ZCodeParser.DYNAMIC))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.singDecl()
                pass
            elif token in [ZCodeParser.NUMBERS, ZCodeParser.BOOLS, ZCodeParser.STRS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.arrayT()
                self.state = 135
                self.match(ZCodeParser.ID)
                self.state = 136
                self.match(ZCodeParser.LSB)
                self.state = 137
                self.sizeList()
                self.state = 138
                self.match(ZCodeParser.RSB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SingDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def WIS(self):
            return self.getToken(ZCodeParser.WIS, 0)

        def expr(self):
            return self.getTypedRuleContext(ZCodeParser.ExprContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_singDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingDecl" ):
                return visitor.visitSingDecl(self)
            else:
                return visitor.visitChildren(self)




    def singDecl(self):

        localctx = ZCodeParser.SingDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_singDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(ZCodeParser.ID)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ZCodeParser.WIS:
                self.state = 143
                self.match(ZCodeParser.WIS)
                self.state = 144
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive(self):
            return self.getTypedRuleContext(ZCodeParser.PrimitiveContext,0)


        def arrayT(self):
            return self.getTypedRuleContext(ZCodeParser.ArrayTContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_typ

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTyp" ):
                return visitor.visitTyp(self)
            else:
                return visitor.visitChildren(self)




    def typ(self):

        localctx = ZCodeParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typ)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.primitive()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.arrayT()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERS(self):
            return self.getToken(ZCodeParser.NUMBERS, 0)

        def BOOLS(self):
            return self.getToken(ZCodeParser.BOOLS, 0)

        def STRS(self):
            return self.getToken(ZCodeParser.STRS, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_primitive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive" ):
                return visitor.visitPrimitive(self)
            else:
                return visitor.visitChildren(self)




    def primitive(self):

        localctx = ZCodeParser.PrimitiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitive)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZCodeParser.NUMBERS) | (1 << ZCodeParser.BOOLS) | (1 << ZCodeParser.STRS))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive(self):
            return self.getTypedRuleContext(ZCodeParser.PrimitiveContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LSB(self):
            return self.getToken(ZCodeParser.LSB, 0)

        def indexExpr(self):
            return self.getTypedRuleContext(ZCodeParser.IndexExprContext,0)


        def RSB(self):
            return self.getToken(ZCodeParser.RSB, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arrayT

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayT" ):
                return visitor.visitArrayT(self)
            else:
                return visitor.visitChildren(self)




    def arrayT(self):

        localctx = ZCodeParser.ArrayTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrayT)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.primitive()
            self.state = 154
            self.match(ZCodeParser.ID)
            self.state = 155
            self.match(ZCodeParser.LSB)
            self.state = 156
            self.indexExpr()
            self.state = 157
            self.match(ZCodeParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERS(self):
            return self.getToken(ZCodeParser.NUMBERS, 0)

        def indexTail(self):
            return self.getTypedRuleContext(ZCodeParser.IndexTailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_indexExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexExpr" ):
                return visitor.visitIndexExpr(self)
            else:
                return visitor.visitChildren(self)




    def indexExpr(self):

        localctx = ZCodeParser.IndexExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_indexExpr)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.match(ZCodeParser.NUMBERS)
                self.state = 160
                self.indexTail()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 161
                self.match(ZCodeParser.NUMBERS)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexTailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def NUMBERS(self):
            return self.getToken(ZCodeParser.NUMBERS, 0)

        def indexTail(self):
            return self.getTypedRuleContext(ZCodeParser.IndexTailContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_indexTail

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexTail" ):
                return visitor.visitIndexTail(self)
            else:
                return visitor.visitChildren(self)




    def indexTail(self):

        localctx = ZCodeParser.IndexTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_indexTail)
        try:
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(ZCodeParser.CM)
                self.state = 165
                self.match(ZCodeParser.NUMBERS)
                self.state = 166
                self.indexTail()
                pass
            elif token in [ZCodeParser.RSB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(ZCodeParser.ArgumentContext,0)


        def argT(self):
            return self.getTypedRuleContext(ZCodeParser.ArgTContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = ZCodeParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_argList)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.NUMBERS, ZCodeParser.BOOLS, ZCodeParser.STRS, ZCodeParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.argument()
                self.state = 171
                self.argT()
                pass
            elif token in [ZCodeParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgTContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self):
            return self.getToken(ZCodeParser.CM, 0)

        def argument(self):
            return self.getTypedRuleContext(ZCodeParser.ArgumentContext,0)


        def argT(self):
            return self.getTypedRuleContext(ZCodeParser.ArgTContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_argT

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgT" ):
                return visitor.visitArgT(self)
            else:
                return visitor.visitChildren(self)




    def argT(self):

        localctx = ZCodeParser.ArgTContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_argT)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ZCodeParser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.match(ZCodeParser.CM)
                self.state = 177
                self.argument()
                self.state = 178
                self.argT()
                pass
            elif token in [ZCodeParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'
